libcfs/libcfs/linux/linux-proc.c
@@ -331,6 +331,23 @@ proc_fail_loc(struct ctl_table *table, int write, void __user *buffer,
 	return rc;
 }
 
+int LL_PROC_PROTO(proc_trigger_watchdog)
+{
+        if (write) {
+		struct lc_watchdog *lcw;
+
+		lcw = lc_watchdog_add(10, NULL, NULL);
+		if (lcw == NULL)
+			return -ENOMEM;
+		lc_watchdog_touch(lcw, 10);
+		schedule_timeout_and_set_state(TASK_UNINTERRUPTIBLE, cfs_time_seconds(20));
+		lc_watchdog_disable(lcw);
+
+		lc_watchdog_delete(lcw);
+	}
+	return *lenp;
+}
+
 static int __proc_cpt_table(void *data, int write,
 			    loff_t pos, void *buffer, int nob)
 {
@@ -558,6 +575,14 @@ static struct ctl_table lnet_table[] = {
 		.mode		= 0644,
 		.proc_handler	= &proc_dointvec,
 	},
+        {
+                INIT_CTL_NAME
+                .procname = "trigger_watchdog",
+                .data     = NULL,
+                .maxlen   = 0,
+                .mode     = 0200,
+                .proc_handler = &proc_trigger_watchdog
+        },
 	{ 0 }
 };
 
